--- a/Giggotz/war/WEB-INF/web.xml
+++ b/Giggotz/war/WEB-INF/web.xml
@@ -34,6 +34,18 @@
     <url-pattern>/giggotz/wikipedia</url-pattern>
   </servlet-mapping>
   
+  <servlet-name>contactServlet</servlet-name>
+		<servlet-class>giggotz.server.rpc.spotify.SpotifyImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>contactServlet</servlet-name>
+		<url-pattern>/giggotz/spotify</url-pattern>
+	</servlet-mapping>
+
+
+
+
   <servlet>
   	<servlet-name>Resteasy</servlet-name>
   	<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
